fix: restore scrolling and prevent clipping

--- a/styles.css
+++ b/styles.css
@@ -202,13 +202,13 @@ body
 {
     background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity (0.5) as desired */
     position: fixed;
-    overflow-x: auto;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
     pointer-events: none;
+    overflow: hidden;
 }
 
 .summary_modal_overlay, .graduation_modal_overlay
@@ -228,7 +228,6 @@ body
     background-color: #fff;
     border-radius: 6px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    overflow: hidden;
 }
 
 .total_credit, .head_btn
